--- a/homework_5/css/styles.css
+++ b/homework_5/css/styles.css
@@ -1,6 +1,7 @@
+/*top left bottom right */
 
-body
-{
+/* For every page*/
+body{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 100%;
     line-height: 1.7em;
@@ -9,41 +10,40 @@ body
     background-color: #ffffff;
 }
 
-#container
-{
+#container{
   width: 40%;
 }
 
-nav {
+nav{
+    line-height: 20px;
     padding: 1px;
     text-align: center;
     background: #000000;
     color: #ffffff;
     font-size: 16px;
-    margin: 0px 0px 0px 0px;
-    border: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-  }
+    margin: 20px 0px 0px 0px;
+    border: 1px 0px 1px 0px;
+}
 
-nav ul {
+nav ul{
     margin-left: auto;
     margin-right: auto;
 }
 
-nav li {
+nav li{
   display: inline-block;
   width: 20%;
 }
 
-nav a:visited, a:link {
+nav a:visited, a:link{
   color:#ffffff;
 }
 
-nav a:active {
-  color:#F5F5F5;
+nav a:active{
+  color:#ffffff;
 }
 
-.home-page {
+#home-page{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -51,43 +51,61 @@ nav a:active {
     margin-top: -40px;
   }
 
-.descriptive-text{
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  font-size: 100%;
-}
-
-.fluffstuff-header {
+#fluffstuff-header{
     height: 75px;
-    line-height: 75px;
+    line-height: 105px;
 
     text-align: center;
-    font: "Trebuchet MS", Helvetica, sans-serif;
     letter-spacing: 10px;
-    font-size: 42px;
+    font-size: 60px;
 
-    background: #B4DBF1;
+    background: #d6dce8;
     color: rgb(0, 0, 0);
 
-    margin: 0px 0px -20px 0px;
+    margin: -90px 0px -20px 0px;
+    padding: 0px 0px 30px 0px;
   }
 
-.promotional-header {
+#login-search-cart{
+  line-height: 20px;
+  font-size: 16px;
+
+  text-align: right;
+  background: #d6dce8;
+  color:  rgb(0, 0, 0);
+
+  margin: 60px 0px 0px 0px;
+  padding: -5px 20px 0px 0px;
+}
+
+#login-search-cart ul{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#login-search-cart li{
+display: inline-block;
+width: 10%;
+}
+
+#login-search-cart a:visited, a:link{
+  color:rgb(0, 0, 0);
+}
+
+#promotional-header {
     text-align: left;
     color:#09466B;
     font-size: 14px;
-
-    margin: 5px 0px -40px 10px;
+    margin: -10px 0px -40px 10px;
   }
 
 #contact-us {
     text-align: center;
     color:#09466B;
     font-size: 14px;
-  }
+}
 
-.contact-us-image {
+#contact-us-image {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
@@ -95,65 +113,67 @@ nav a:active {
     padding-left: 2px;
     padding-right: 2px;
     margin: -10px 2px 0px 2px;
-  }
+}
 
-.grid-container {
+/* For main page*/
+
+#descriptive-text{
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    font-size: 100%;
+    font-family: Georgia, serif;
+    color: #0e2105;
+}
+
+/* For products page*/
+
+#grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 400px);
+  grid-template-columns: repeat(3, 300px);
   grid-template-rows: repeat(3, 300px);
   grid-gap: 10px;
-  margin-left: 175px;
-  }
+  margin-left: 350px;
+  margin-right: 125px;
+  padding: 15px 15px 15px 15px;
+  background: #d6dce8;
+}
 
-.grid-image {
+#grid-image {
   width: 300px;
   height: auto;
   margin-left: auto;
   margin-right: auto;
-    }
-    /* taken from https://www.filamentgroup.com/lab/select-css.html and then heavily edited */
-    .select-css {
-      display: block;
-      font-size: 16px;
-      font-family: sans-serif;
-      font-weight: 700;
-      color: #444;
-      line-height: 1.3;
-      padding: .6em 1.4em .5em .8em;
-      width: 10%;
-      max-width: 100%;
-      box-sizing: border-box;
-      margin: 0px 0px 30px 1200px;
-      border: 1px solid #aaa;
-      box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-      border-radius: .5em;
-      -moz-appearance: none;
-      -webkit-appearance: none;
-      appearance: none;
-      background-color: #fff;
-      background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
-      background-repeat: no-repeat, repeat;
-      background-position: right .7em top 50%, 0 0;
-      background-size: .65em auto, 100%;
-    }
-    .select-css::-ms-expand {
-      display: none;
-    }
-    .select-css:hover {
-      border-color: #888;
-    }
-    .select-css:focus {
-      border-color: #aaa;
-      box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
-      box-shadow: 0 0 0 3px -moz-mac-focusring;
-      color: #222;
-      outline: none;
-    }
-    .select-css option {
-      font-weight:normal;
-    }
-
-#sidebar{
-  display: inline;
 }
+
+#filter-sidebar{
+  /*height: 100%;  Full-height: remove this if you want "auto" height */
+  width: 250px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  left: 0;
+  background-color: #ffffff; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  margin: -40px 0px 0px 50px;
+  padding: 10px 10px 10px 10px;
+}
+
+#pillow{
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  left: 0;
+  background-color: #ffffff; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  margin: 0px 0px 0px 150px;
+  padding: 10px 10px 10px 10px;
+}
+
+#pillow-sidebar{
+  /*height: 100%;  Full-height: remove this if you want "auto" height */
+  /*width: 250px; /* Set the width of the sidebar */
+  z-index: 1; /* Stay on top */
+  position: fixed;
+  /*background-color: #ffffff; /* Black */
+  /*overflow-x: hidden; /* Disable horizontal scroll */
+  margin: 0px 0px 0px 750px; 
+  padding: 10px 10px 200px 100px;
+}
+
