--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,14 @@ h3 {
     font-weight: 200;
     font-size: .75em;
 }
+
+.quatro-card{
+    padding-top: 5%;
+    padding-right: 2%;
+    padding-left: 2%;
+    font-size: 1.25em;
+    letter-spacing: 0.05em;
+    border:1px solid #cecece;
+    box-shadow: 1px 1px 1px gainsboro;
+    border-radius: 0;
+}
