--- a/css/style.css
+++ b/css/style.css
@@ -122,24 +122,25 @@ h3 {
     border-radius: 0;
 }
 
-#seis.container-fluid{
-    background-color: #fcfbf7;
+#quatro.container-fluid{
+    background-color: #ffffff;
+    border:1px solid #fdfafa;
     color: #000000;
-    padding-top: 7.5%;
-    height: 200%;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 2.5%;
+    height: 255%;
     overflow-y: hidden;
 }
 
-.seis-images{
-    width: 75%;
+.quatro-images{
+    width: 80%;
     height: auto;
+    transition: all .2s ease-in-out;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-
-#a.row{
-    display: flex-start;
-}
-
-#b.row{
-    display: flex-end;
+.quatro-images:hover{
+    transform: scale(1.01);
 }
