--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ h3 {
     padding-top: 2%;
     padding-right: 2%;
     padding-left: 2%;
-    font-size: 1.25em;
+    font-size: 1em;
     letter-spacing: 0.05em;
     border:1px solid #cecece;
     box-shadow: 1px 1px 1px gainsboro;
@@ -126,8 +126,6 @@ h3 {
     background-color: #ffffff;
     border:1px solid #fdfafa;
     color: #000000;
-    padding-right: 2%;
-    padding-left: 2%;
     padding-top: 2.5%;
     height: 255%;
     overflow-y: hidden;
@@ -142,5 +140,28 @@ h3 {
 }
 
 .quatro-images:hover{
-    transform: scale(1.01);
+    transform: scale(1.03);
+}
+
+#cinco.container-fluid{
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    padding-right: 2.5%;
+    padding-left: 2.5%;
+} 
+
+.cinco-card{
+    padding-top: 2%;
+    padding-right: 2%;
+    padding-left: 2%;
+    font-size: 1.25em;
+    letter-spacing: 0.05em;
+    border:1px solid #cecece;
+    box-shadow: 1px 1px 1px gainsboro;
+    border-radius: 0;
+}
+
+#quatro-caoursel-0{
+    width: 50%;
+    height: auto;
 }
